--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+body{
+  background: rgb(19, 19, 19);
+}
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.name {
+  font-weight: 300;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  color: white;
+  font-size: 25px;
+  text-decoration: none;
+  margin-bottom: 30px;
+}
+
+
+.row {
+  display: flex;
+}
+.cage {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+}
+.cage.alive{
+  background: white;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.play {
+  margin-top: 40px;
+  padding: 10px 20px;
+}
+.pointer {
+  cursor: pointer;
 }
